Major backend upgrade: Added payment module, email service, JWT security enhancements and invoice generation